--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.482.0",
+    "motion": "^12.23.6",
     "next": "^15.3.4",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
+    "svix": "^1.69.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.2",
