--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,9 @@
     "app/**/*.**": {
       "maxDuration": 60
     }
-  }
+  },
+  "crons": [{
+    "path": "/api/cron/daily",
+    "schedule": "0 10 * * *"
+  }]
 }
